syntax = "proto3";

package message;

option go_package = "protos/message";

service Messages {
	rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
	rpc GetMessages (GetMessagesRequest) returns (stream Message) {}
}

message Message {
	string id = 1;
	string sender_id = 2;
	string receiver_id = 3;
	string content = 4;
}

message SendMessageRequest {
	string sender_id = 1;
	string receiver_id = 2;
	string content = 3;
}

message SendMessageResponse {
	bool success = 1;
	string message_id = 2;
	string error = 3;
}

message GetMessagesRequest {
	string user_id = 1;
}

